cabal-version:      2.4
name:               json-parser
version:            0.1.0.0
synopsis:           JSON parser written in haskell

-- A longer description of the package.
-- description:
homepage:           https://www.github.com/caleb-freitas/json-parser/

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Caleb Freitas
maintainer:         calebfreitas@tutanota.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

executable json-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
